--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 1rem;
-    height: 100%;
+    width: 100%;
 }
 
 .button{
@@ -100,14 +100,6 @@
     transition: all 0.3s ease;
 }
 
-.navbar__toggle .bar {
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    transition: all 0.3s ease-in-out;
-    background-color: black; 
-}
-
 @media screen and (max-width: 850px) {
     .navbar__container {
         height: 75px;
@@ -127,7 +119,7 @@
         width: 100%;
         top: -999px;
         opacity: 0;
-        margin: 0 auto;
+        margin: 0;
         transition: all 0.3s ease;
         background-color: rgb(189, 9, 9);
     }
@@ -147,14 +139,6 @@
         padding-left: 25px;
     }
 
-    .navbar__toogle .bar{
-        width: 25px;
-        height: 3px;
-        margin: 5px auto;
-        transition: all 0.3s ease-in-out;
-        background-color: brown;
-    }
-
     .navbar__item {
         width: 100%;
     }
@@ -165,6 +149,15 @@
         display: table;
         padding: 2rem;
     }
+
+    .navbar__toggle .bar {
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background-color: black; 
+    }
+    
 
     #mobile-menu {
         position: absolute;
