--- a/styles.css
+++ b/styles.css
@@ -112,12 +112,12 @@
     }
 
     .navbar__menu {
-        height: 50vh;
+        height: 100vh;
         display: grid;
         grid-template-columns: auto;
-        z-index: -1;
+        z-index: 1;
         width: 100%;
-        top: -999px;
+        top: -100vh;
         opacity: 0;
         margin: 0;
         transition: all 0.3s ease;
@@ -130,7 +130,7 @@
         opacity: 1;
         transition: all 0.5s ease;
         width: 100%;
-        z-index: 99;
+        z-index: 1;
         height: 50vh;
         font-size: 1.6rem;
     }
@@ -150,6 +150,15 @@
         padding: 2rem;
     }
 
+    .navbar__toggle {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 100; 
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+    }
     .navbar__toggle .bar {
         width: 25px;
         height: 3px;
@@ -174,7 +183,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 80%;
+        width: 100%;
         height: 80px;
         margin: 0;
     }
@@ -182,6 +191,8 @@
     .navbar__toggle .bar {
         display: block;
         cursor: pointer;
+        opacity: 2;
+        z-index: 100;
     }
 
     #mobile-menu.is-active .bar:nth-child(2){
@@ -189,11 +200,11 @@
     }
 
     #mobile-menu.is-active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg);
+        transform: translateY(12px) rotate(45deg);
     }
 
     #mobile-menu.is-active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg);
+        transform: translateY(-12px) rotate(-45deg);
     }
 }
 
