--- a/styles.css
+++ b/styles.css
@@ -357,3 +357,122 @@
     margin: 2.5rem 0;
     }
 }
+
+/* Service Sec */
+.services {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.services h1{
+    background-color: royalblue;
+    background-image: linear-gradient(to top,  royalblue 20%, rgb(232, 127, 255) 100%);
+    background-size: 100%;
+    margin-bottom: 5rem;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+.services h2{
+    background-color: royalblue;
+    background-image: linear-gradient(to top,  royalblue 20%, rgb(232, 127, 255) 100%);
+    background-size: 100%;
+    margin-bottom: 5rem;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+.services p{
+    background-color: royalblue;
+    background-image: linear-gradient(to top,  royalblue 20%, rgb(232, 127, 255) 100%);
+    background-size: 100%;
+    margin-bottom: 5rem;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.services__container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.services__card {
+    margin: 1rem;
+    width: 400px;
+    height: 550px;
+    border-radius: 4px;
+    background-image: linear-gradient(to top,  rgba(0,0,0) 0%, rgba(17,17,17,0.6) 100%),url(/Images/pic2.jpg);
+    background-size: cover;
+    background-color: white;
+    position: relative;
+}
+
+.services__card:nth-child(2){
+    background-image: linear-gradient(to top,  rgba(0,0,0) 0%, rgba(17,17,17,0.6) 100%),url(/Images/pic3.jpg);
+}
+
+.services h2{
+    position: absolute;
+    top: 350px;
+    left: 30px;
+}
+
+.services__card p{
+    position: absolute;
+    top: 400px;
+    left: 30px;
+}
+
+.services__card button{
+    position: absolute;
+    top: 450px;
+    left: 30px;
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    background-color: blue;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.services__card:hover {
+    transform: scale(1.075);
+    transition: 0.2s ease-in;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 960px) {
+    .services {
+    height: 1600px;
+    }
+
+    .services h1 {
+    font-size: 2rem;
+    margin-top: 12rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .services {
+    height: 1400px;
+    }
+
+    .services h1 {
+    font-size: 1.2rem;
+    }
+    .services__card{
+    width: 300px;
+    }
+}
+
+/* Footer */
