--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 /* Navbar */
 .navbar {
-    background-color: rgba(19, 176, 87, 0.817);
+    background-color: rgb(19, 176, 87);
     height: 75px;
     display: flex;
     justify-content: center;
@@ -283,6 +283,7 @@
     position: relative;
     transition: all 0.35s;
     outline: none;
+    margin-bottom: 2rem;
 }
 
 .main__btn a{
@@ -310,6 +311,10 @@
 
 .main__btn:hover::after{
     width: 100%;
+}
+
+.main__img--container {
+    align-items: center;
 }
 
 #main__img{
@@ -340,31 +345,22 @@
 
 @media screen and (max-width: 480px) {
 
-    .main__content h1 {
-    font-size: 2rem;
-    margin-top: 3rem;
-    }
+    .main__content h1 {font-size: 2rem;margin-top: 3rem;}
 
     .main__content h2 {font-size: 2rem;}
 
-    .main__content p {
-    margin-top: 2rem;
-    font-size: 1.5rem;
-    }
+    .main__content p {margin-top: 2rem;font-size: 1.5rem;}
 
-    .main__btn {
-    padding: 12px 36px;
-    margin: 2.5rem 0;
-    }
+    .main__btn {padding: 12px 36px;margin: 2.5rem 0;}
 }
 
 /* Service Sec */
 .services {
-    background-color: black;
+    background-color: yellowgreen;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .services h1{
@@ -464,7 +460,7 @@
 
 @media screen and (max-width: 480px) {
     .services {
-    height: 1400px;
+    height: 1200px;
     }
 
     .services h1 {
@@ -472,7 +468,61 @@
     }
     .services__card{
     width: 300px;
+    margin-bottom: 2rem;
     }
 }
 
 /* Footer */
+.footer__container{
+    background-color: black;
+    margin-top: 2rem;
+    display: flex;
+    padding: 5rem 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    color: white;
+    width: 100%;
+}
+
+.footer__links {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer__link--wrapper {
+    display: flex;
+}
+
+.footer__link--items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: left;
+    width: 160px;
+    box-sizing: border-box;
+}
+
+.footer__link--items h2 {
+    margin-bottom: 16px;
+}
+
+.footer__link--items > h2 {
+    color: white;
+}
+
+.footer__link--items a {
+    color: white;
+    text-decoration: none;
+    margin-bottom: 0.5rem;
+}
+
+.footer__link--items a:hover {
+    color: blue;
+    transition: 0.3s ease-out;
+}
+
